--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cypress/code-coverage": "^3.9.2",
+    "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,10 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "cypress": "^6.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
+    "start-server-and-test": "^1.12.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -31,7 +35,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "cypress:start:app": "npx react-scripts -r @cypress/instrument-cra start",
+    "cypress:start:wait": "npx start-server-and-test cypress:start:app http://localhost:3000",
+    "cypress:open": "yarn cypress:start:wait -- \"cypress open\"",
+    "cypress:run": "yarn cypress:start:wait -- \"cypress run\""
   },
   "eslintConfig": {
     "extends": [
